# ProjectFastAPI

./: .env.sample  Dockerfile  compose.yaml  pyproject.toml  test_user.json  test_users.json  users.json
.github/workflows/: release.yaml  test.yaml
app/: app.py  main.py  users.json
app/database/: users.py
app/models/: error_message.py  status.py  support_data.py  user.py  user_data.py  user_response.py
app/routers/: status.py  users.py
database/: engine.py  users.py
tests/: conftest.py  test_api.py  test_api_users.py  test_smoke.py
